--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   csis-database:
     image: postgres
     environment:
-      - POSTGRES_PASSWORD='postgres'
+      POSTGRES_PASSWORD: 'postgres'
     container_name: csis-database
     ports:
       - '5432:5432'
