--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,34 @@
-version: '3'
+version: "3.8"
 
 services:
-  csis-database:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: 'postgres'
-    container_name: csis-database
+  
+  mongo:
+    image: mongo
+    container_name: mongo
+    restart: always
     ports:
-      - '5432:5432'
-    volumes:
-      - .docker/dbdata:/var/lib/postgresqk/data
+      - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+    networks:
+      - mongo-compose-network
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongo
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+    links:
+      - mongo
+    networks:
+      - mongo-compose-network
+  
+networks: 
+    mongo-compose-network:
+      driver: bridge
