--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^4.11.0",
+    "bson": "^5.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "prisma": "^4.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
