--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="mongodb://root:root@localhost:27017/mongo?authSource=admin"
+# DATABASE_URL="mongodb://root:root@localhost:27017/mongo?authSource=admin&directConnection=true"
+DATABASE_URL="postgresql://docker:docker@localhost:5432/csis?schema=public"
