--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,33 +2,19 @@ version: "3.8"
 
 services:
   
-  mongo:
-    image: mongo
-    container_name: mongo
+  database:
+    image: postgres
+    container_name: database_csis
     restart: always
-    ports:
-      - 27017:27017
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=root
-    networks:
-      - mongo-compose-network
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=csis
+    ports:
+      - 5432:5432
+    volumes:
+      - pgdata:/data/postgres
 
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
-    links:
-      - mongo
-    networks:
-      - mongo-compose-network
-  
-networks: 
-    mongo-compose-network:
-      driver: bridge
+volumes:
+    pgdata:
+        driver: local
